# tradecat

./: .gitignore  GITHUB_OPTIMIZATION.md  README.md  README_EN.md  SETUP_PROMPT.md  messages.mo
config/: logrotate.conf
docker/: README.md
scripts/: check_env.sh  start.sh
services-preview/fate-service/: Makefile  pyproject.toml
services-preview/fate-service/services/telegram-service/src/: _paths.py  bazi_calculator.py  bot.py
services-preview/markets-service/: Makefile  pyproject.toml
services-preview/markets-service/tests/: __init__.py  conftest.py
services-preview/order-service/: Makefile  pyproject.toml
services-preview/order-service/src/: __main__.py
services-preview/order-service/tests/: conftest.py
services-preview/predict-service/: pyproject.toml
services-preview/vis-service/: pyproject.toml
services-preview/vis-service/src/templates/: registry.py
services/ai-service/tests/: conftest.py
services/telegram-service/locales/en/LC_MESSAGES/: bot.mo  bot.po
services/telegram-service/locales/zh_CN/LC_MESSAGES/: bot.mo  bot.po
services/telegram-service/src/bot/: app.py
services/telegram-service/src/signals/: __init__.py  adapter.py  engine_v2.py  history.py  pg_engine.py
services/trading-service/src/indicators/batch/: vpvr.py
