[project]
name = "markets-service"
version = "0.1.0"
description = "Universal market data collection service - supports crypto, stocks, futures, options, forex, bonds"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TradeCat Team" }]
keywords = ["market-data", "crypto", "stocks", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心框架
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    
    # 数据库
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    
    # 加密货币
    "ccxt>=4.0.0",
    "cryptofeed>=2.4.0",
    
    # A股/国内市场
    "akshare>=1.14.0",
    "baostock>=0.8.8",
    
    # 美股/全球
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
    
    # 宏观经济
    "fredapi>=0.5.0",
    
    # 通用
    "pandas>=2.0",
    "numpy>=1.24",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
]
pricing = ["QuantLib>=1.30"]
aggregator = ["openbb>=4.0"]
all = ["QuantLib>=1.30", "openbb>=4.0"]

[project.scripts]
markets-service = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ==================== Ruff ====================
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==================== Pytest ====================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# ==================== Coverage ====================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ==================== MyPy ====================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
