[project]
name = "order-service"
version = "0.1.0"
description = "Trading execution service for TradeCat - Avellaneda-Stoikov market making"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0.0",
    "cryptofeed>=2.4.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
market-maker = "src.market-maker.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
